src/Quiz/.antlr/quizParser.java
// Generated from /home/ricardo/Documentos/C/quiz-comp-05/src/Quiz/quiz.g4 by ANTLR 4.8

    package Quiz;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class quizParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, CORRECT=47, NUMBER=48, FLOAT=49, NAME=50, STRING=51, COMMENT=52, 
		NEWLINE=53, MULTICOMM=54, WS=55;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_expr = 2, RULE_quiz = 3, RULE_createReport = 4, 
		RULE_add = 5, RULE_sub_question = 6, RULE_sub_groups = 7, RULE_load = 8, 
		RULE_remove = 9, RULE_defineAnswer = 10, RULE_defineMark = 11, RULE_mark = 12, 
		RULE_showGroup = 13, RULE_showOpt = 14, RULE_evaluation = 15, RULE_multichoice = 16, 
		RULE_multichoiceoption = 17, RULE_matching = 18, RULE_matchingoption = 19, 
		RULE_match = 20, RULE_import_expr = 21, RULE_plist = 22, RULE_p = 23, 
		RULE_show = 24, RULE_question = 25, RULE_ques_opt = 26, RULE_shuffle = 27, 
		RULE_getAnswer = 28, RULE_getChoice = 29, RULE_getAnswerToChoice = 30, 
		RULE_shortQuestion = 31, RULE_numeric = 32, RULE_essay = 33, RULE_option = 34, 
		RULE_optionMult = 35, RULE_finishQuiz = 36, RULE_title = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "expr", "quiz", "createReport", "add", "sub_question", 
			"sub_groups", "load", "remove", "defineAnswer", "defineMark", "mark", 
			"showGroup", "showOpt", "evaluation", "multichoice", "multichoiceoption", 
			"matching", "matchingoption", "match", "import_expr", "plist", "p", "show", 
			"question", "ques_opt", "shuffle", "getAnswer", "getChoice", "getAnswerToChoice", 
			"shortQuestion", "numeric", "essay", "option", "optionMult", "finishQuiz", 
			"title"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'create quiz'", "'title'", "'='", "'auto-corrective'", "'create'", 
			"'report'", "'add group'", "','", "'add'", "'to'", "'all'", "'group'", 
			"'load'", "'as'", "'remove'", "'from'", "'define-answer'", "'define-mark'", 
			"'if'", "'wrong'", "'show'", "'repeat'", "'times'", "'discount'", "'{'", 
			"'}'", "'evaluation'", "'multi-choice'", "'id'", "'text'", "'option'", 
			"'matching'", "'side'", "'match'", "'import'", "'and'", "'with'", "'shuffle'", 
			"'get'", "'answer'", "'choice'", "'short-question'", "'numeric-question'", 
			"'essay-question'", "'option-multi'", "'finish quiz'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "CORRECT", 
			"NUMBER", "FLOAT", "NAME", "STRING", "COMMENT", "NEWLINE", "MULTICOMM", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "quiz.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public quizParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(quizParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__6) | (1L << T__8) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__20) | (1L << T__26) | (1L << T__27) | (1L << T__31) | (1L << T__37) | (1L << T__38) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(76);
				stat();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__6) | (1L << T__8) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__20) | (1L << T__26) | (1L << T__27) | (1L << T__31) | (1L << T__37) | (1L << T__38) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45))) != 0)) {
				{
				{
				setState(84);
				expr();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public QuizContext quiz() {
			return getRuleContext(QuizContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public MultichoiceContext multichoice() {
			return getRuleContext(MultichoiceContext.class,0);
		}
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public EvaluationContext evaluation() {
			return getRuleContext(EvaluationContext.class,0);
		}
		public RemoveContext remove() {
			return getRuleContext(RemoveContext.class,0);
		}
		public DefineAnswerContext defineAnswer() {
			return getRuleContext(DefineAnswerContext.class,0);
		}
		public ShowGroupContext showGroup() {
			return getRuleContext(ShowGroupContext.class,0);
		}
		public Import_exprContext import_expr() {
			return getRuleContext(Import_exprContext.class,0);
		}
		public ShowOptContext showOpt() {
			return getRuleContext(ShowOptContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public ShortQuestionContext shortQuestion() {
			return getRuleContext(ShortQuestionContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public EssayContext essay() {
			return getRuleContext(EssayContext.class,0);
		}
		public CreateReportContext createReport() {
			return getRuleContext(CreateReportContext.class,0);
		}
		public OptionContext option() {
			return getRuleContext(OptionContext.class,0);
		}
		public FinishQuizContext finishQuiz() {
			return getRuleContext(FinishQuizContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				quiz();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				add();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				multichoice();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				matching();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(96);
				evaluation();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(97);
				remove();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(98);
				defineAnswer();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(99);
				showGroup();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(100);
				import_expr();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(101);
				showOpt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(102);
				load();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(103);
				shortQuestion();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(104);
				numeric();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(105);
				essay();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(106);
				createReport();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(107);
				option();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(108);
				finishQuiz();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuizContext extends ParserRuleContext {
		public QuizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quiz; }
	 
		public QuizContext() { }
		public void copyFrom(QuizContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CreateQuizCorrectionContext extends QuizContext {
		public TerminalNode STRING() { return getToken(quizParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(quizParser.NUMBER, 0); }
		public CreateQuizCorrectionContext(QuizContext ctx) { copyFrom(ctx); }
	}
	public static class CreateQuizContext extends QuizContext {
		public TerminalNode STRING() { return getToken(quizParser.STRING, 0); }
		public CreateQuizContext(QuizContext ctx) { copyFrom(ctx); }
	}

	public final QuizContext quiz() throws RecognitionException {
		QuizContext _localctx = new QuizContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_quiz);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new CreateQuizContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(T__0);
				setState(112);
				match(T__1);
				setState(113);
				match(T__2);
				setState(114);
				match(STRING);
				}
				break;
			case 2:
				_localctx = new CreateQuizCorrectionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(T__0);
				setState(116);
				match(T__1);
				setState(117);
				match(T__2);
				setState(118);
				match(STRING);
				setState(119);
				match(T__3);
				setState(120);
				match(NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateReportContext extends ParserRuleContext {
		public CreateReportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createReport; }
	}

	public final CreateReportContext createReport() throws RecognitionException {
		CreateReportContext _localctx = new CreateReportContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createReport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__4);
			setState(124);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	 
		public AddContext() { }
		public void copyFrom(AddContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddOptionContext extends AddContext {
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public Sub_questionContext sub_question() {
			return getRuleContext(Sub_questionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public AddOptionContext(AddContext ctx) { copyFrom(ctx); }
	}
	public static class CreateGroupContext extends AddContext {
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public CreateGroupContext(AddContext ctx) { copyFrom(ctx); }
	}
	public static class AddAllContext extends AddContext {
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public AddAllContext(AddContext ctx) { copyFrom(ctx); }
	}
	public static class CreateMultiGroupContext extends AddContext {
		public List<TerminalNode> NAME() { return getTokens(quizParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(quizParser.NAME, i);
		}
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public CreateMultiGroupContext(AddContext ctx) { copyFrom(ctx); }
	}
	public static class AddQuestion2GroupContext extends AddContext {
		public Sub_questionContext sub_question() {
			return getRuleContext(Sub_questionContext.class,0);
		}
		public Sub_groupsContext sub_groups() {
			return getRuleContext(Sub_groupsContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public AddQuestion2GroupContext(AddContext ctx) { copyFrom(ctx); }
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_add);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new CreateGroupContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(T__6);
				setState(127);
				match(NAME);
				setState(128);
				match(NEWLINE);
				}
				break;
			case 2:
				_localctx = new CreateMultiGroupContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(T__6);
				setState(130);
				match(NAME);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(131);
					match(T__7);
					setState(132);
					match(NAME);
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(138);
				match(NEWLINE);
				}
				break;
			case 3:
				_localctx = new AddOptionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				match(T__8);
				setState(140);
				match(NAME);
				setState(141);
				match(T__9);
				setState(142);
				sub_question();
				setState(143);
				match(NEWLINE);
				}
				break;
			case 4:
				_localctx = new AddAllContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				match(T__8);
				setState(146);
				match(NAME);
				setState(147);
				match(T__9);
				setState(148);
				match(T__10);
				setState(149);
				match(NEWLINE);
				}
				break;
			case 5:
				_localctx = new AddQuestion2GroupContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(150);
				match(T__8);
				setState(151);
				sub_question();
				setState(152);
				match(T__9);
				setState(153);
				match(T__11);
				setState(154);
				sub_groups();
				setState(155);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sub_questionContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(quizParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(quizParser.NAME, i);
		}
		public Sub_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub_question; }
	}

	public final Sub_questionContext sub_question() throws RecognitionException {
		Sub_questionContext _localctx = new Sub_questionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sub_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(NAME);
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(160);
				match(T__7);
				setState(161);
				match(NAME);
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sub_groupsContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(quizParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(quizParser.NAME, i);
		}
		public Sub_groupsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub_groups; }
	}

	public final Sub_groupsContext sub_groups() throws RecognitionException {
		Sub_groupsContext _localctx = new Sub_groupsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sub_groups);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(NAME);
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(168);
				match(T__7);
				setState(169);
				match(NAME);
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public LoadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load; }
	 
		public LoadContext() { }
		public void copyFrom(LoadContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoadBancoContext extends LoadContext {
		public TerminalNode STRING() { return getToken(quizParser.STRING, 0); }
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public LoadBancoContext(LoadContext ctx) { copyFrom(ctx); }
	}

	public final LoadContext load() throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_load);
		try {
			_localctx = new LoadBancoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(T__12);
			setState(176);
			match(STRING);
			setState(177);
			match(T__13);
			setState(178);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RemoveContext extends ParserRuleContext {
		public RemoveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_remove; }
	 
		public RemoveContext() { }
		public void copyFrom(RemoveContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EliminarContext extends RemoveContext {
		public List<TerminalNode> NAME() { return getTokens(quizParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(quizParser.NAME, i);
		}
		public EliminarContext(RemoveContext ctx) { copyFrom(ctx); }
	}

	public final RemoveContext remove() throws RecognitionException {
		RemoveContext _localctx = new RemoveContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_remove);
		try {
			_localctx = new EliminarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(T__14);
			setState(181);
			match(NAME);
			setState(182);
			match(T__15);
			setState(183);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineAnswerContext extends ParserRuleContext {
		public DefineAnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineAnswer; }
	 
		public DefineAnswerContext() { }
		public void copyFrom(DefineAnswerContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefinirRespostaContext extends DefineAnswerContext {
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public Sub_questionContext sub_question() {
			return getRuleContext(Sub_questionContext.class,0);
		}
		public DefinirRespostaContext(DefineAnswerContext ctx) { copyFrom(ctx); }
	}

	public final DefineAnswerContext defineAnswer() throws RecognitionException {
		DefineAnswerContext _localctx = new DefineAnswerContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defineAnswer);
		try {
			_localctx = new DefinirRespostaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(T__16);
			setState(186);
			match(NAME);
			setState(187);
			match(T__9);
			setState(188);
			sub_question();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineMarkContext extends ParserRuleContext {
		public DefineMarkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineMark; }
	 
		public DefineMarkContext() { }
		public void copyFrom(DefineMarkContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefinirCotacaoMudaPerguntaContext extends DefineMarkContext {
		public MarkContext mark() {
			return getRuleContext(MarkContext.class,0);
		}
		public List<TerminalNode> NAME() { return getTokens(quizParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(quizParser.NAME, i);
		}
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public DefinirCotacaoMudaPerguntaContext(DefineMarkContext ctx) { copyFrom(ctx); }
	}
	public static class DefinirCotacaoSemDescontoContext extends DefineMarkContext {
		public MarkContext mark() {
			return getRuleContext(MarkContext.class,0);
		}
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public DefinirCotacaoSemDescontoContext(DefineMarkContext ctx) { copyFrom(ctx); }
	}
	public static class DefinirCotacaoDescontarContext extends DefineMarkContext {
		public List<MarkContext> mark() {
			return getRuleContexts(MarkContext.class);
		}
		public MarkContext mark(int i) {
			return getRuleContext(MarkContext.class,i);
		}
		public TerminalNode NAME() { return getToken(quizParser.NAME, 0); }
		public TerminalNode NUMBER() { return getToken(quizParser.NUMBER, 0); }
		public TerminalNode NEWLINE() { return getToken(quizParser.NEWLINE, 0); }
		public DefinirCotacaoDescontarContext(DefineMarkContext ctx) { copyFrom(ctx); }
	}
